--- a/aveo.html
+++ b/aveo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
+    <meta chgit arset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ejercicios del DOM</title>
+    <title>Aveo</title>
     <link rel="stylesheet" href="css/dom-ejercicios.css" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/marcas.css">
